# ModelClient

./: .gitignore  Dockerfile  compose.yaml  docker-bake.hcl  pyproject.toml
manifests/: example_manifest.yaml
src/modelrunner/: __init__.py  contract.py  enums.py  main.py  manifest.py  ports.py  settings.py
src/modelrunner/adapters/: __init__.py  adapter_loader.py  dummy.py  wkmeans.py
src/modelrunner/predict/: __init__.py  predict_routes.py  prediction_service.py
src/modelrunner/sdk/: __init__.py  client.py  manifest_io.py  predict_doc.py
tests/: conftest.py  sdk.py  test_predict.py  test_sdk_client.py  test_sdk_manifest.py  test_wkmeans_adapter.py
